<resources>
    <!-- app settings -->
    <string name="app_name">AplusApp</string>
    <string name="app_brand">NVIVID Technologies</string>

    <string name="app_signIn">Sign in</string>
    <string name="app_signInSub">with APlus account</string>
    <string name="app_forgot_password">forgot password ?</string>
    <string name="app_req_account">Don\'t have a account? request a new account</string>
    <string name="app_username_hint">User name</string>
    <string name="app_password_hint">Password</string>
    <string name="app_login_checkbox_value">Keep me signed in </string>
    <string name="app_branch">Branch</string>

    <string name="app_home_card_sale">Sales</string>
    <string name="app_home_card_report">Reports</string>
    <string name="app_home_card_inventory">Inventory</string>
    <string name="app_home_card_orders">Orders</string>
    <string name="app_home_card_customer">Customers</string>
    <string name="app_home_card_employee">Users</string>

    <string name="app_req_account1">Request</string>
    <string name="app_req_account2">an</string>
    <string name="app_req_account3">account</string>

    <string name="app_reset">Reset</string>
    <string name="app_select_role">Select a role</string>
    <string name="app_request">Request</string>

    <string name="app_email">E-mail</string>
    <string name="app_role">Role</string>
    <string name="app_contact">Contact</string>
    <string name="app_back_to_home">Back to\nHome</string>
    <string name="app_account_info">Account Info</string>
    <string name="app_add_account">Add new account</string>

    <!-- common text -->
    <string name="app_popup_close_icon">X</string>

    <!-- reset password popup props -->
    <string name="app_reset_password_instruction_1">Confirm your email address we\'ll send</string>
    <string name="app_reset_password_instruction_2">the instructions</string>

    <string name="ComplBtn">Complete</string>
    <string name="DeleBtn">Delete</string>
    <string name="Ordr">Orders</string>
    <string name="CheckB1">get</string>


    <string name="delete">delete</string>
    <string name="add">+</string>
    <string name="monthly_purchases">Monthly Purchases</string>

    <!-- end -->


    <!--add Inventory-->
    <string name="add_inventory">Add</string>
    <string name="sales_price">Sales Price</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>

    <!--end-->

    <!--update Inventory-->
    <string name="product_code_00001">Product code :- 00001</string>
    <string name="update_inventory">Update</string>
    <string name="inventory_list">Inventory List</string>
    <!--end-->

    <!--delete Inventory-->
    <string name="do_you_want_to_delete_this_inventory">Do you want to delete this Inventory?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="inventory_table">Inventory Table</string>
    <string name="name">Name</string>
    <string name="quatity">Quatity</string>
    <string name="price">Price</string>
    <string name="update">Update</string>
    <string name="_002">002</string>
    <string name="_12">$12</string>
    <string name="_001">1</string>
    <string name="in1">IN1</string>

    <string name="in2">IN2</string>
    <string name="_100">100</string>
    <string name="_15">$15</string>
    <string name="_003">003</string>

    <string name="_150">150</string>

    <!--end-->


    <!-- dummy text -->
    <string name="app_dummy_user_name">shalitha senanayaka</string>
    <string name="app_dummy_user_role">administrator</string>
    <string name="app_dummy_user_organization">ABC branch</string>
    <string name="app_dummy_user_email">shalithax@gmail.com</string>
    <string name="app_dummy_user_contact">077 194 005 5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnComplete">Complete</string>
    <string name="app_password_reset">RESET</string>
    <string name="app_chnage_user_title">Change User Information</string>
    <string name="app_phone">Phone</string>
    <string name="app_confirm_password">Confirm-Password</string>
    <string name="app_save_changes">Save changes</string>
    <string name="add">ADD</string>

</resources>
