<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inventory"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <TextView
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/product_code_00001"/>



    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/quantity"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/category"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/sales_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/update_inventory"
        android:textColor="@color/Black"
        android:textStyle="bold" />


</LinearLayout>