<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inventory"
    tools:context=".MainActivity"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_height="200dp"/>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:autofillHints="@string/product_code"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/product_code"
        android:inputType="text"
        android:textColorHint="@android:color/holo_blue_dark" />

    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:autofillHints="@string/product_name"
        android:hint="@string/product_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/quantity"
        android:autofillHints="@string/quantity"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>


    <EditText

        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@android:color/holo_blue_dark"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:hint="@string/category"
        android:autofillHints="@string/category"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText

    android:layout_marginTop="20dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:textColorHint="@android:color/holo_blue_dark"
    android:backgroundTint="@android:color/holo_blue_light"
    android:gravity="center_horizontal"
    android:hint="@string/sales_price"
        android:autofillHints="@string/sales_price"
        android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="50dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_button"
        android:text="@string/add_inventory"
        android:layout_marginBottom="50dp"
        android:textColor="@color/Black" />


</LinearLayout>